Cropped EMPAD CBED too much, fixed

--- a/jupyter/ssb_empad.ipynb
+++ b/jupyter/ssb_empad.ipynb
@@ -62,7 +62,7 @@
     "x_cbed, y_cbed = 128, 130\n",
     "data = data.reshape((npos, npos, y_cbed, x_cbed))\n",
     "data = data.transpose((1, 0, 2, 3))\n",
-    "data = data[:, :, 2:126, 2:126]\n",
+    "data = data[:, :, :128, :]\n",
     "\n",
     "sumcbed = np.sum(data, (1, 0))\n",
     "cbed_totals = np.sum(data, (2,3))"
